--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "NerdNexus",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:Frontend": "node dist/frontend/server/server.mjs"
+    "serve:ssr:NerdNexus": "node dist/NerdNexus/server/server.mjs"
   },
   "private": true,
   "dependencies": {
